--- a/app/views/bug_reports/index.html.erb
+++ b/app/views/bug_reports/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "controllers/loadMoreTable", defer: true %>
 <style>
   .status-select {
     margin: 0;
@@ -53,6 +54,7 @@
         <% end %>
       </tbody>
     </table>
+    <button id="load-more-button-todo" class="btn">Voir plus</button>
   </div>
 </section>
 <section class="grid-1">
@@ -89,6 +91,7 @@
         <% end %>
       </tbody>
     </table>
+    <button id="load-more-button-in-progress" class="btn">Voir plus</button>
   </div>
 </section>
 <section class="grid-1">
@@ -125,6 +128,7 @@
         <% end %>
       </tbody>
     </table>
+    <button id="load-more-button-resolved" class="btn">Voir plus</button>
   </div>
 </section>
 <section class="grid-1">
@@ -161,44 +165,6 @@
         <% end %>
       </tbody>
     </table>
+    <button id="load-more-button-all" class="btn">Voir plus</button>
   </div>
 </section>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    // Fonction pour afficher plus de lignes pour un tableau spécifique
-    function showMoreRows(rows, loadMoreButton) {
-      const initialRowsToShow = 10;
-      let rowsToShow = initialRowsToShow;
-
-      // Cacher les lignes supplémentaires initialement
-      rows.forEach((row, index) => {
-        if (index >= rowsToShow) {
-          row.style.display = 'none';
-        }
-      });
-
-      loadMoreButton.addEventListener('click', function () {
-        for (let i = rowsToShow; i < rowsToShow + initialRowsToShow; i++) {
-          if (i >= rows.length) {
-            loadMoreButton.disabled = true;
-            loadMoreButton.textContent = "Toutes les lignes chargées";
-            break;
-          }
-          rows[i].style.display = '';
-        }
-        rowsToShow += initialRowsToShow;
-      });
-    }
-
-    // Récupérer tous les tableaux et les boutons "Voir plus"
-    const tables = document.querySelectorAll('.grid-1 table');
-    const loadMoreButtons = document.querySelectorAll('[id^="load-more-button"]');
-
-    // Pour chaque tableau, appliquer la fonction showMoreRows
-    tables.forEach((table, index) => {
-      const rows = table.querySelectorAll('tbody tr');
-      const loadMoreButton = loadMoreButtons[index];
-      showMoreRows(rows, loadMoreButton);
-    });
-  });
-</script>
