--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,5 +1,6 @@
 <% content_for :title, "Donnez nous vos feedbacks - Omniscient Design" %>
 <% content_for :description, "Fais-nous des retours PERTINENT sur le site pour qu'on puisse avancer plus loins plus vite plus mieux ! Miam les retours on adore ça." %>
+<%= javascript_include_tag "controllers/starRating", defer: true %>
 <style>
   label {
     font-weight: 500;
@@ -205,28 +206,3 @@
     <% end %>
   </div>
 </section>
-<script>
-  $(document).ready(function() {
-  const starRatings = document.querySelectorAll('.star-rating');
-  starRatings.forEach(starRating => {
-  const stars = starRating.querySelectorAll('label');
-  const input = starRating.querySelector('input[type="hidden"]');
-  stars.forEach(star => {
-  star.addEventListener('click', function() {
-  const value = this.getAttribute('data-value');
-  input.value = value;
-  updateStars(stars, value);
-  });
-  });
-  });
-  function updateStars(stars, value) {
-  stars.forEach(star => {
-  if (star.getAttribute('data-value') <= value) {
-        star.style.color = '#f5c518';
-      } else {
-        star.style.color = '#ddd';
-      }
-    });
-  }
-    });
-</script>
