--- a/app/views/oeuvres/new.html.erb
+++ b/app/views/oeuvres/new.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "controllers/recaptcha", defer: true %>
 <section class="top-header">
   <%= link_to add_elements_path do %>
     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -12,12 +13,3 @@
   <%= render "form", oeuvre: @oeuvre %>
 </section>
 <script src="https://www.google.com/recaptcha/api.js?render=<%= Rails.application.secrets.recaptcha_site_key %>"></script>
-<script>
-  document.querySelector("form").addEventListener("submit", function(event) {
-    event.preventDefault(); // Empêche l'envoi temporaire pour attendre le token
-    grecaptcha.execute("<%= Rails.application.secrets.recaptcha_site_key %>", {action: 'submit'}).then(function(token) {
-      document.getElementById('recaptcha_token').value = token;
-      event.target.submit(); // Soumet le formulaire après avoir obtenu le token
-    });
-  });
-</script>
