--- a/app/views/pages/cookies.html.erb
+++ b/app/views/pages/cookies.html.erb
@@ -11,20 +11,20 @@
   <p>Ce site web utilise des cookies pour améliorer votre expérience de navigation. Les cookies sont de petits fichiers texte stockés sur votre ordinateur lorsque vous visitez un site web. Ils sont largement utilisés pour aider les sites à fonctionner correctement, à améliorer leur performance et à fournir des informations aux propriétaires du site.</p>
   <h2>2 - Types de Cookies Utilisés</h2>
   <p>
-    <span class="black">1. Cookies Essentiels :</span> Ces cookies sont nécessaires au bon fonctionnement du site et ne peuvent pas être désactivés dans nos systèmes. Ils sont généralement définis en réponse à des actions que vous effectuez, comme la demande de services, telles que la connexion ou le remplissage de formulaires.<br>
+    <span class="black medium">1. Cookies Essentiels :</span> Ces cookies sont nécessaires au bon fonctionnement du site et ne peuvent pas être désactivés dans nos systèmes. Ils sont généralement définis en réponse à des actions que vous effectuez, comme la demande de services, telles que la connexion ou le remplissage de formulaires.<br>
     <br>
-    <span class="black">2. Cookies Analytiques :</span> Ces cookies nous permettent de suivre les performances de notre site web, de comprendre comment les visiteurs interagissent avec le site et d'améliorer ses fonctionnalités. Les informations collectées sont anonymes et servent à améliorer notre site.<br>
+    <span class="black medium">2. Cookies Analytiques :</span> Ces cookies nous permettent de suivre les performances de notre site web, de comprendre comment les visiteurs interagissent avec le site et d'améliorer ses fonctionnalités. Les informations collectées sont anonymes et servent à améliorer notre site.<br>
     <br>
-    <span class="black"> 3. Cookies de Personnalisation :</span> Ces cookies permettent au site de se souvenir de vos choix et préférences, tels que la langue préférée ou la région dans laquelle vous vous trouvez. Ces informations peuvent être utilisées pour vous offrir une expérience plus personnalisée.
+    <span class="black medium"> 3. Cookies de Personnalisation :</span> Ces cookies permettent au site de se souvenir de vos choix et préférences, tels que la langue préférée ou la région dans laquelle vous vous trouvez. Ces informations peuvent être utilisées pour vous offrir une expérience plus personnalisée.
   </p>
   <h2>3 - Sécurité</h2>
   <p>Nous prenons des mesures pour protéger vos informations personnelles contre tout accès non autorisé, utilisation abusive ou divulgation. Cependant, veuillez noter qu'aucune méthode de transmission de données sur Internet ou de stockage électronique n'est totalement sécurisée. Nous ne pouvons donc pas garantir une sécurité absolue.<br>
     Notre site internet possède bien entendu un Certificat SSL (Secure Socket Layer).
   </p>
   <h2>4 - Droit d'Accès, de Modification et de Suppression</h2>
-  <p>Vous avez le droit d'accéder, de modifier ou de supprimer les informations personnelles que vous nous avez fournies. Pour cela, veuillez nous contacter à l'adresse suivante : support@viturna.fr. Nous nous efforcerons de répondre à votre demande dans les plus brefs délais.</p>
+  <p>Vous avez le droit d'accéder, de modifier ou de supprimer les informations personnelles que vous nous avez fournies. Pour cela, veuillez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black underline" target="_blank">omniscientdesign.co@gmail.com</a>. Nous nous efforcerons de répondre à votre demande dans les plus brefs délais.</p>
   <h2>5 - Politique de l'hébergeur</h2>
-  <p>Notre hébergeur possède sa propre politique de confidentialité concernant l'utilisation de vos données que vous pouvez consulter en tout temps https://www.hostinger.fr/politique-de-confidentialite.</p>
+  <p>Notre hébergeur possède sa propre politique de confidentialité concernant l'utilisation de vos données que vous pouvez consulter en tout temps <a href="https://www.hostinger.fr/politique-de-confidentialite" class="black underline">https://www.hostinger.fr/politique-de-confidentialite</a>.</p>
   <h2>6 - Consentement a notre politique</h2>
   <p>En utilisant notre site, vous consentez à notre politique de confidentialité et que celle-ci puisse être modifiée en tout temps par l'éditeur.</p>
   <h2>Modification  de la Politique de Confidentialité</h2>
