--- a/app/views/pages/mentionslegales.html.erb
+++ b/app/views/pages/mentionslegales.html.erb
@@ -7,7 +7,7 @@
   <h1>Mentions légales</h1>
 </section>
 <section class="grid-1">
-  <p>Conformément aux dispositions des articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique (L.C.E.N.), il est porté à la connaissance des utilisateurs et visiteurs du site <a href="https://omniscientdesign.fr" class="black" target="_blank">https://omniscientdesign.fr</a>, ci-après dénommé "le Site", les présentes mentions légales.
+  <p>Conformément aux dispositions des articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique (L.C.E.N.), il est porté à la connaissance des utilisateurs et visiteurs du site <a href="https://omniscientdesign.fr" class="black underline" target="_blank">https://omniscientdesign.fr</a>, ci-après dénommé "le Site", les présentes mentions légales.
     <br>
     La connexion et la navigation sur le Site par tout utilisateur, ci-après dénommé "l'Utilisateur", impliquent l'acceptation pleine et entière des présentes mentions légales. Ces dernières sont accessibles à tout moment dans la rubrique « Mentions légales » du Site.
   </p>
@@ -17,14 +17,15 @@
     <br>
     Nom et prénom du propriétaire : QUEMERE Edgar<br>
     Adresse du propriétaire : 49-55 rue Donissan, 33000 Bordeaux <br>
-    Adresse email :  edgarquemere2645@gmail.com<br>
-    Numéro de téléphone : 06 95 81 77 27<br>
+    Numéro de téléphone : <a href="tel:0695817727" class="black underline">06 95 81 77 27</a><br>
+    Adresse email : <a href="mailto:edgarquemere2645@gmail.com" class="black underline">edgarquemere2645@gmail.com</a>
+    <br>
     <br>
     <span class="black medium">Responsable de la publication :</span> <br>
     <br>
     Nom et prénom : QUEMERE Edgar<br>
-    Numéro de téléphone : 06 95 81 77 27<br>
-    Adresse email : edgarquemere2645@gmail.com
+    Numéro de téléphone : <a href="tel:0695817727" class="black underline">06 95 81 77 27</a><br>
+    Adresse email : <a href="mailto:edgarquemere2645@gmail.com" class="black underline">edgarquemere2645@gmail.com</a>
   </p>
   <h2>2 - Hébergement</h2>
   <p>
@@ -66,5 +67,5 @@
   <h2>8 - Modifications des mentions légales</h2>
   <p>Nous nous réservons le droit de modifier ces mentions légales à tout moment. Toute modification prendra effet dès sa publication sur ce site.</p>
   <h2>9 - Contact</h2>
-  <p>Pour toute question ou remarque concernant ces mentions légales, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>.</p>
+  <p>Pour toute question ou remarque concernant ces mentions légales, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black underline" target="_blank">omniscientdesign.co@gmail.com</a>.</p>
 </section>
