--- a/app/views/pages/politiquedeconfidentialite.html.erb
+++ b/app/views/pages/politiquedeconfidentialite.html.erb
@@ -15,14 +15,14 @@
     &nbsp;• Sur les destinataires de ces données personnelles ;<br>
     &nbsp;• Sur la politique du site en matière de cookies.<br>
     <br>
-    Cette politique complète les mentions légales et les Conditions Générales d’Utilisation consultables par les utilisateurs à l’adresse suivante : <a href="https://omniscientdesign.fr" class="black underline" target="_blank">https://omniscientdesign.fr/mentionslegales</a> et <a href="https://omniscientdesign.fr/cgu" class="black" target="_blank">https://omniscientdesign.fr/cgu</a>
+    Cette politique complète les mentions légales et les Conditions Générales d’Utilisation consultables par les utilisateurs à l’adresse suivante : <a href="https://omniscientdesign.fr" class="black underline" target="_blank">https://omniscientdesign.fr/mentionslegales</a> et <a href="https://omniscientdesign.fr/cgu" class="black underline" target="_blank">https://omniscientdesign.fr/cgu</a>
   </p>
   <h2>1 - Responsable du traitement des données</h2>
   <p>
     Le responsable du traitement des données est : QUEMERE Edgar<br>
     Adresse : 49-55 rue Donissan, 33000 Bordeaux<br>
-    Email : edgar.r6player@gmail.com<br>
-    Numéro de téléphone : 06 95 81 77 27
+    Numéro de téléphone : <a href="tel:0695817727" class="black underline">06 95 81 77 27</a><br>
+    Adresse email : <a href="mailto:edgarquemere2645@gmail.com" class="black underline">edgarquemere2645@gmail.com</a>
   </p>
   <h2>2 - Données collectées</h2>
   <p>
@@ -54,8 +54,8 @@
   <p>
     Vos données personnelles sont strictement confidentielles et ne sont accessibles qu'à des tiers dans les cas suivants :<br>
     <br>
-    &nbsp;• Sous-traitants : Nous pouvons partager vos données avec des prestataires de services (hébergement, maintenance, marketing, etc.) qui agissent pour notre compte et sous notre contrôle.<br>
-    &nbsp;• Obligations légales : Nous pouvons être amenés à divulguer vos données en cas d'obligation légale (demande d’une autorité judiciaire ou administrative).
+    <span class="black medium">&nbsp;• Sous-traitants :</span> Nous pouvons partager vos données avec des prestataires de services (hébergement, maintenance, marketing, etc.) qui agissent pour notre compte et sous notre contrôle.<br>
+    <span class="black medium">&nbsp;• Obligations légales :</span> Nous pouvons être amenés à divulguer vos données en cas d'obligation légale (demande d’une autorité judiciaire ou administrative).
   </p>
   <h2>6 - Durée de conservation des données</h2>
   <p>
