--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "controllers/showPassword", defer: true %>
 <div class="log" style="background-color:#202020; color:#FFF; min-height:100vh;">
   <section class="box-log">
     <h1>Changer votre mot de passe</h1>
@@ -37,23 +38,3 @@
     </div>
   </section>
 </div>
-<script>
-  $(document).ready(function() {
-    $('.toggle-password').on('click', function() {
-      const target = $(this).data('target');
-      const $passwordField = $(target);
-      const $showPasswordIcon = $(this).find('.show-password-icon');
-      const $hidePasswordIcon = $(this).find('.hide-password-icon');
-
-      if ($passwordField.attr('type') === 'password') {
-        $passwordField.attr('type', 'text');
-        $showPasswordIcon.hide();
-        $hidePasswordIcon.show();
-      } else {
-        $passwordField.attr('type', 'password');
-        $showPasswordIcon.show();
-        $hidePasswordIcon.hide();
-      }
-    });
-  });
-</script>
