--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <% content_for :title, "S'inscrire - Omniscient Design" %>
 <% content_for :description, "Inscris-toi sur Omniscient Design pour devenir un vrai pro dans l'univers du design. Rejoins une communauté de passionnés prête à tout pour rendre le design accessible." %>
+<%= javascript_include_tag "controllers/showPassword", defer: true %>
 <div class="log" style="background-color:#202020; color:#FFF; min-height:100vh;">
   <%= image_tag "logo-white.svg", alt: "", class: "logo-log" %>
   <section class="box-log">
@@ -70,23 +71,3 @@
     </div>
   </section>
 </div>
-<script>
-  $(document).ready(function() {
-    $('.toggle-password').on('click', function() {
-      const target = $(this).data('target');
-      const $passwordField = $(target);
-      const $showPasswordIcon = $(this).find('.show-password-icon');
-      const $hidePasswordIcon = $(this).find('.hide-password-icon');
-
-      if ($passwordField.attr('type') === 'password') {
-        $passwordField.attr('type', 'text');
-        $showPasswordIcon.hide();
-        $hidePasswordIcon.show();
-      } else {
-        $passwordField.attr('type', 'password');
-        $showPasswordIcon.show();
-        $hidePasswordIcon.hide();
-      }
-    });
-  });
-</script>
