--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,6 +70,16 @@ main{
 .grid-1 {
   padding: 0 10vw 64px 10vw;
 }
+@media screen and (max-width: 425px) {
+  .grid-1 {
+    padding: 0 5vw 32px 5vw;
+  }
+}
+@media screen and (min-width:426px) and (max-width: 1024px) {
+  .grid-1 {
+    padding: 0 8vw 52px 8vw;
+  }
+}
 
 /* Home Page */
 
@@ -133,6 +143,7 @@ main{
   background-color: #202020;
   color:#FFF;
   position: relative;
+  margin-bottom: 48px;
 }
 
 @media screen and (max-width:600px) {
@@ -140,6 +151,7 @@ main{
     padding: 0 5vw;
     padding-top: 64px;
     padding-bottom: 56px;
+    margin-bottom: 24px;
   }
 }
 @media screen and (min-width:601px) and (max-width:800px) {
@@ -147,5 +159,6 @@ main{
     padding: 0 8vw;
     padding-top: 72px;
     padding-bottom: 64px;
+    margin-bottom: 32px;
   }
 }
