--- a/app/assets/stylesheets/base/_font.scss
+++ b/app/assets/stylesheets/base/_font.scss
@@ -87,9 +87,11 @@ p{
 
   h2 {
     font-size: 21px;
+    margin: 24px 0 16px 0;
   }
   h3{
     font-size: 19px;
+    margin: 16px 0 8px 0;
   }
   p{
     font-size: 17px;
@@ -102,9 +104,11 @@ p{
 
   h2 {
     font-size: 20px;
+    margin: 24px 0 16px 0;
   }
   h3{
     font-size: 18px;
+    margin: 16px 0 8px 0;
   }
   p{
     font-size: 16px;
