--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -240,6 +240,10 @@
   }
 }
 @media screen and (max-width: 425px) {
+  .flex-info-card {
+    width: 100%;
+    padding: 0 8px;
+  }
   .img-card {
     transform: rotate(0deg)
   }
