--- a/app/views/designers/new.html.erb
+++ b/app/views/designers/new.html.erb
@@ -12,12 +12,4 @@
   <%= render "form", designer: @designer %>
 </section>
 <script src="https://www.google.com/recaptcha/api.js?render=<%= Rails.application.secrets.recaptcha_site_key %>"></script>
-<script>
-  document.querySelector("form").addEventListener("submit", function(event) {
-    event.preventDefault(); // Empêche l'envoi temporaire pour attendre le token
-    grecaptcha.execute("<%= Rails.application.secrets.recaptcha_site_key %>", {action: 'submit'}).then(function(token) {
-      document.getElementById('recaptcha_token').value = token;
-      event.target.submit(); // Soumet le formulaire après avoir obtenu le token
-    });
-  });
-</script>
+<%= javascript_include_tag "controllers/recaptcha", defer: true %>
