--- a/app/views/pages/validation.html.erb
+++ b/app/views/pages/validation.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "controllers/loadMoreTable", defer: true %>
 <section class="top-default-page">
   <%= link_to profil_path do %>
     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -193,42 +194,3 @@
     <button class="btn">Voir plus de designers validés</button>
   </div>
 </section>
-<script>
-  $(document).ready(function() {
-    // Fonction pour afficher plus de lignes pour un tableau spécifique
-    function showMoreRows(rows, loadMoreButton) {
-      const initialRowsToShow = 10;
-      let rowsToShow = initialRowsToShow;
-
-      // Cacher les lignes supplémentaires initialement
-      rows.forEach((row, index) => {
-        if (index >= rowsToShow) {
-          row.style.display = 'none';
-        }
-      });
-
-      loadMoreButton.addEventListener('click', function() {
-        for (let i = rowsToShow; i < rowsToShow + initialRowsToShow; i++) {
-          if (i >= rows.length) {
-            loadMoreButton.disabled = true;
-            loadMoreButton.textContent = "Toutes les lignes chargées";
-            break;
-          }
-          rows[i].style.display = '';
-        }
-        rowsToShow += initialRowsToShow;
-      });
-    }
-
-    // Récupérer tous les tableaux et les boutons "Voir plus"
-    const tables = document.querySelectorAll('.grid-1 table');
-    const loadMoreButtons = document.querySelectorAll('[id^="load-more-button"]');
-
-    // Pour chaque tableau, appliquer la fonction showMoreRows
-    tables.forEach((table, index) => {
-      const rows = table.querySelectorAll('tbody tr');
-      const loadMoreButton = loadMoreButtons[index];
-      showMoreRows(rows, loadMoreButton);
-    });
-  });
-</script>
