--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -1,15 +1,5 @@
 @import 'abstracts/variables';
 
-.top-popup {
-  border-radius: 10px 10px 0 0;
-  height: 80px;
-  width: 100%;
-  background-color: #F7F7F7;
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-
 .popup {
   display: none;
   position: fixed;
@@ -32,14 +22,23 @@
   padding-bottom: 45px
 }
 
+.top-popup {
+  border-radius: 10px 10px 0 0;
+  height: 80px;
+  width: 90%;
+  background-color: #F7F7F7;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 5%;
+}
+
 .popup .popup-content form {
   padding: 0 50px;
 }
 
 .close-popup {
-  position: absolute;
-  right: 25px;
-  top: 35%;
   scale: 0.7;
   cursor: pointer;
 }
@@ -47,30 +46,33 @@
 .close-popup:hover {
   opacity: 0.6;
 }
-.flex-title-popup{
+
+.flex-title-popup {
   margin-top: 32px;
   padding: 0 50px;
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
 }
-.title-popup{
-  color:#202020;
+
+.title-popup {
+  color: #202020;
   font-weight: 500;
   font-size: 20px;
 }
-.popup-link-add{
+
+.popup-link-add {
   padding: 0;
   font-size: 18px;
   color: #202020;
-  text-decoration:underline;
+  text-decoration: underline;
 }
+
 @media screen and (min-width: 0px) and (max-width: 425px) {
   .top-popup {
     height: 70px;
   }
+
   .close-popup {
-    right: 25px;
-    top: 25%;
     scale: 0.6;
   }
 
@@ -78,35 +80,131 @@
     width: 90vw;
   }
 
-  .flex-title-popup{
+  .flex-title-popup {
     flex-direction: column;
     margin-top: 24px;
     padding: 0 16px;
     gap: 8px;
   }
-  .title-popup{
+
+  .title-popup {
     font-size: 18px;
   }
-  .popup-link-add{
+
+  .popup-link-add {
     width: fit-content;
     font-size: 16px;
   }
 }
+
 @media screen and (min-width: 426px) and (max-width: 768px) {
   .top-popup {
     height: 70px;
   }
-  .close-popup {
-    right: 25px;
-    top: 25%;
-  }
+
   .popup-content {
     width: 90vw;
   }
 
-  .flex-title-popup{
+  .flex-title-popup {
     margin-top: 24px;
     padding: 0 30px;
+  }
+
+}
+
+
+
+// Save Liste
+.box-list {
+  padding: 0px 50px;
+  align-items: center;
+  margin-top: 24px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box-list-left {
+  display: flex;
+  align-items: center;
+}
+
+.box-list svg {
+  scale: 0.9;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
+.img-list {
+  width: 80px;
+  height: 80px;
+  background-color: #d1d1d1;
+  border-radius: 5px;
+  margin-right: 16px;
+}
+
+.title-list {
+  font-size: 20px;
+  color: #202020;
+  margin-bottom: 8px;
+  font-weight: 500;
+}
+
+.nb-list {
+  font-size: 16px;
+  color: #8D9299;
+}
+
+.hover-btn {
+  display: none;
+}
+
+.add-to-list-btn {
+  padding: 0;
+}
+@media screen and (min-width: 446px) and (max-width: 768px) {
+  .box-list {
+    padding: 0px 40px;
+  }
+
+  .box-list svg {
+    scale: 0.8;
+  }
+  .title-list {
+    font-size: 18px;
+    margin-bottom: 4px;
+  }
+  .img-list {
+    width: 60px;
+    height: 60px;
+  }
+
+
+}
+@media screen and (min-width: 0px) and (max-width: 445px) {
+  .box-list {
+    padding: 0px 16px;
+  }
+
+  .box-list svg {
+    scale: 0.8;
+  }
+
+  .img-list {
+    width: 60px;
+    height: 60px;
+  }
+
+  .title-list {
+    font-size: 18px;
+    margin-bottom: 4px;
+  }
+
+  .nb-list {
+    font-size: 14px;
   }
 
 }
