--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -95,7 +95,7 @@ header li .active svg path {
 }
 
 /* Petit desktop */
-@media screen and (max-width: 1280px) {
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
   header {
     width: 20vw;
     height: 100vh;
@@ -206,13 +206,12 @@ header li .active svg path {
     font-size: 1rem;
   }
 }
-
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 601px) and (max-width: 768px ) {
   header {
     position: fixed;
     width: 100vw;
-    height: 80px;
-    padding: 0 10px;
+    height: 90px;
+    padding: 0px;
     bottom: 0;
     left: 0;
     background-color: $secondary-color;
@@ -227,8 +226,140 @@ header li .active svg path {
     display: none;
   }
 
-  .nav-header {
+ .nav-header {
+    width: 100%;
     margin: 0;
+    padding: 0 20vw;
+  }
+
+  header ul {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  header li {
+    flex: 1;
+    text-align: center;
+  }
+
+  header li:nth-child(2) {
+    flex: 2;
+  }
+
+  header li a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 0.9rem;
+    gap: 0.5rem;
+  }
+
+  header li a svg {
+    scale: 1;
+  }
+
+  header li .active {
+    font-size: 0.9rem;
+  }
+
+  .flex-btn-login,
+  .link-header {
+    display: none;
+  }
+}
+@media screen and (min-width: 501px) and (max-width: 600px ) {
+  header {
+    position: fixed;
+    width: 100vw;
+    height: 90px;
+    padding: 0px;
+    bottom: 0;
+    left: 0;
+    background-color: $secondary-color;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .logo-header,
+  .name-header {
+    display: none;
+  }
+
+ .nav-header {
+    width: 100%;
+    margin: 0;
+    padding: 0 15vw;
+  }
+
+  header ul {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  header li {
+    flex: 1;
+    text-align: center;
+  }
+
+  header li:nth-child(2) {
+    flex: 2;
+  }
+
+  header li a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 0.9rem;
+    gap: 0.25rem;
+  }
+
+  header li a svg {
+    scale: 0.9;
+  }
+
+  header li .active {
+    font-size: 0.9rem;
+  }
+
+  .flex-btn-login,
+  .link-header {
+    display: none;
+  }
+}
+@media screen and (min-width: 376px) and (max-width: 500px) {
+  header {
+    position: fixed;
+    width: 100vw;
+    height: 80px;
+    padding: 0px;
+    bottom: 0;
+    left: 0;
+    background-color: $secondary-color;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .logo-header,
+  .name-header {
+    display: none;
+  }
+
+ .nav-header {
+    width: 100%;
+    margin: 0;
+    padding: 0 10vw;
   }
 
   header ul {
@@ -271,7 +402,7 @@ header li .active svg path {
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 375px) {
   header {
     position: fixed;
     width: 100vw;
@@ -292,13 +423,15 @@ header li .active svg path {
   }
 
   .nav-header {
+    width: 100%;
     margin: 0;
+    padding: 0 5vw;
   }
 
   header ul {
     display: flex;
     flex-direction: row;
-    gap: 0.5rem;
+    gap: 5%;
     width: 100%;
     justify-content: space-between;
     align-items: center;
