Profile picture / Responsive header / Responsive parrainage / Responsive notifications

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,8 @@
 @import 'pages/homepage';
 @import 'pages/list';
 @import 'pages/log';
+@import 'pages/notification';
+@import 'pages/parrainage';
 @import 'pages/profil';
 @import 'pages/reference';
 
