--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -201,3 +201,10 @@ textarea {
     }
   }
 }
+
+.profile-picture{
+  border-radius: 150px;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
