--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,23 +6,14 @@
   <section class="box-log">
     <h1>S’inscrire</h1>
     <div class="form">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :post, multipart: true }) do |f| %>
         <div class="field">
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email*" %>
+          <%= f.label :email, "Email" %>
+          <%= f.email_field :email, autocomplete: "email", placeholder: "Email*" %>
         </div>
-        <div class="field password-container">
-          <%= f.password_field :password, autocomplete: "current-password", placeholder: "Mot de passe*", id: "password-field-1" %>
-          <button type="button" class="toggle-password" data-target="#password-field-1">
-            <svg class="show-password-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-eye">
-              <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-              <circle cx="12" cy="12" r="3"></circle>
-            </svg>
-            <svg class="hide-password-icon" style="display:none;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-eye-off">
-              <path d="M17.94 17.94a10.97 10.97 0 0 1-5.94 1.94C6 20 2 12 2 12s1.5-3.34 4.94-5.94M1 1l22 22"></path>
-              <path d="M12 5a7 7 0 0 1 7 7"></path>
-            </svg>
-          </button>
+        <div class="field">
+          <%= f.label :password, "Mot de passe" %>
+          <%= f.password_field :password, autocomplete: "new-password", placeholder: "Mot de passe*" %>
         </div>
         <div class="field password-container">
           <%= f.password_field :password_confirmation, autocomplete: "current-password", placeholder: "Confirmer le mot de passe*", id: "password-field-2" %>
@@ -41,6 +32,15 @@
           <p class="title-boxlog">Informations supplémentaires</p>
         </div>
         <div class="field">
+          <%= f.label :profile_image, "Photo de profil" %>
+          <%= f.file_field :profile_image %>
+          <% if resource.profile_image.attached? %>
+            <div class="profile-image-preview">
+              <%= image_tag resource.profile_image_variant, class:"profile-picture" %>
+            </div>
+          <% end %>
+        </div>
+        <div class="field">
           <%= f.text_field :firstname, autocomplete: "firstname", placeholder: "Prénom" %>
         </div>
         <div class="field">
@@ -53,20 +53,15 @@
           <%= f.collection_select :statut, [["Étudiant", "Étudiant"], ["Enseignant", "Enseignant"], ["Autre", "Autre"]], :first, :last, { prompt: "Choisissez un statut*" }, { class: "form-control" } %>
         </div>
         <div class="field">
-          <%= f.collection_select :etablissement_id, Etablissement.order(:city), :id, :all_info, { include_blank: "Aucun établissement" }, { class: "form-control" } %>
+          <%= f.label :rgpd_consent, "J'accepte les conditions RGPD" %>
+          <%= f.check_box :rgpd_consent %>
         </div>
         <div class="field">
           <%= f.text_field :referral_code, placeholder: "Code de parrainage" %>
         </div>
-        <div class="field rgpd">
-          <%= f.check_box :rgpd_consent, required: true %>
-          <%= f.label :rgpd_consent, ("J'accepte que mes données personnelles soient collectées et traitées conformément à la " + link_to('Politique de confidentialité', politiquedeconfidentialite_path, target: "_blank")).html_safe, class: "rgpd-label" %>
-        </div>
         <div class="actions">
-          <%= f.submit "S’inscrire ⏩️", class:"button dark btn-login" %>
+          <%= f.submit "S’inscrire ⏩️", class: "btn btn-primary" %>
         </div>
-        <%= link_to "Vous avez déjà un compte ? Se connecter", new_user_session_path, class: "sign-up-in" %>
-        <p class="email-confirmation">Déjà inscrit mais pas encore confirmé ? <%= link_to 'Renvoyer l\'email de confirmation', new_user_confirmation_path, class: "sign-up-in"%></p>
       <% end %>
     </div>
   </section>
