--- a/app/assets/stylesheets/pages/_profil.scss
+++ b/app/assets/stylesheets/pages/_profil.scss
@@ -63,6 +63,7 @@
 
   .img-profil {
     width: 140px;
+    height: 140px;
   }
 
   .name {
@@ -100,6 +101,7 @@
 
   .img-profil {
     width: 100px;
+    height: 100px;
   }
 
   .name {
@@ -143,6 +145,7 @@
 
   .img-profil {
     width: 90px;
+    height: 90px;
   }
 
   .name {
