--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -215,6 +215,14 @@
       scale: 0.7;
     }
   }
+  .circle-notif {
+    width: 50px;
+    height: 50px;
+
+    svg {
+      scale: 0.7;
+    }
+  }
 
   // BACK
   .circle-back {
@@ -257,7 +265,14 @@
       scale: 0.7;
     }
   }
+  .circle-notif {
+    width: 50px;
+    height: 50px;
 
+    svg {
+      scale: 0.7;
+    }
+  }
   // BACK
   .circle-back {
     top: 35px;
@@ -299,7 +314,14 @@
       scale: 0.7;
     }
   }
+  .circle-notif {
+    width: 50px;
+    height: 50px;
 
+    svg {
+      scale: 0.6;
+    }
+  }
   // BACK
   .circle-back {
     top: 25px;
